--- a/Audio_Modeling_Experiments.ipynb
+++ b/Audio_Modeling_Experiments.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO1qY0za719VoSxeb7dh7td",
+      "authorship_tag": "ABX9TyNvu44ueRVoUctIfUFPtuH0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4063,6 +4063,38 @@
       },
       "execution_count": 10,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from datetime import datetime\n",
+        "\n",
+        "# Get the current date\n",
+        "current_date = datetime.today().strftime('%m_%d_%Y')  # Format as MM_DD_YYYY\n",
+        "\n",
+        "# Save CSV with current date in the filename\n",
+        "file_name = f'/content/experiment_results_{current_date}.csv'\n",
+        "results_df.to_csv(file_name, index=False)\n",
+        "\n",
+        "print(f\"File saved as: {file_name}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iqJSynnNEPfj",
+        "outputId": "15114f9c-2c32-4af3-b6a8-e69cd2817890"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "File saved as: /content/experiment_results_01_15_2025.csv\n"
+          ]
+        }
+      ]
     }
   ]
 }
